--- a/Module-1/Section-CSS-1/CSS Grid Practice/Grid 1/index.html
+++ b/Module-1/Section-CSS-1/CSS Grid Practice/Grid 1/index.html
@@ -5,7 +5,14 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="box-1"></div>
+            <div class="box-1">  <div>MID CENTURY MODERN <br> by Andrew Lohman</div>
+            <div>GARMENTS <br> by Dan Mall</div>
+            <div>STEEL <br> by Steffen Knoeller</div>
+            <div>APOTHECARY <br> by Trent Walton</div>
+            <div>SCREEN FILLER <br> by Elliot Jay Stocks</div>
+            <div>FOUNTAIN KISS <br> by Jeremy Carlson</div>
+            <div>A ROBOT NAMED JIMMY <br> by meltmedia</div>
+            <div>VERDE MODERNA <br> by Dave Shea</div></div>
             <div class="box-2"></div>
             <div class="box-3"></div>
             <div class="box-4"></div>
