--- a/Module-2/JS-2/Speed-Clicker/index.html
+++ b/Module-2/JS-2/Speed-Clicker/index.html
@@ -6,9 +6,9 @@
     <title>Speed Clicker</title>
 </head>
 <body>
-    <button id="clickMe" onclick="click, myBtn">Click Me</button>
+    <button id="clickMe" onclick="click", myBtn>Click Me</button>
     <div>
-        <p id="counter">This button has been clicked: </p>
+        <p id="counter">Clicks: </p>
     </div>
     <script src="index.js"></script>
 </body>
