--- a/Module-1/Section-CSS-1/Business Time/about.html
+++ b/Module-1/Section-CSS-1/Business Time/about.html
@@ -26,7 +26,7 @@
                 <div class="background-container-about">
                     <h1 class="about-us-heading">About Us</h1>
                     <div class="black-container">
-                        <p class="about-us-info">Since beginning in 1995, Divine Dining has been serving customers from all of the world and was made with them in mind. We take pride in our food and our setting. Our menu is filled with robust flavors and our dishes are curated to take our patrons palates on an extraordinary ride. If you are looking for a once in a lifetime experience, visit here and you will receive not only an exceptional meal, but also a devine awakening.</p>
+                        <p class="about-us-info">Since beginning in 1995, Divine Dining has been serving customers from all of the world and was made with them in mind. We take pride in our food and our setting. Our menu is filled with robust flavors and our dishes are curated to take our patrons palates on an extraordinary ride. If you are seeking a once in a lifetime experience, then visit here where you will, not only, receive an exceptional meal, but also a devine awakening.</p>
                     </div>
                 </div>
             </div>
